# file_serving_webapp

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  sd_init.c  task_scheduler.c  web_server.c  wifi.c
main/assets/: index.html  index_org.html
main/assets/scripts/: script_index.js
main/assets/styles/: style_index.css
main/include/: sd_init.h  task_scheduler.h  web_server.h  wifi.h
